--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "python.pythonPath": "/Users/ludanxer/.pyenv/versions/3.7.2/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
